# rs-rawzips2blobs2jsons

./: Cargo.toml  README.md  build.sh  example.sh  opt.sh  rawzips2blobs2jsons.wasm
sample.d/: hw20.txt
src/: lib.rs
