[package]
name = "rs-rawzips2blobs2jsons"
version = "0.1.0"
edition = "2024"

description = "Convert zips via stdin -> JSON blobs"
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-rawzips2blobs2jsons"
homepage = "https://github.com/takanoriyanagitani/rs-rawzips2blobs2jsons"
documentation = "https://docs.rs/rs-rawzips2blobs2jsons/latest"
keywords = ["zip", "wasi", "json", "blob", "base64"]

exclude = [
	"rawzips2blobs2jsons.wasm",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rawzip = "0.4"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dependencies.serde]
version = "1"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
	"std",
]

[[bin]]
name = "rawzips2blobs2jsons"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
